- added filter on industry ID in leads, reported leads. - added default promo link, added columns to client table preference.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     clientSecret,
     usage: 'payment', //default, the customer is paying
     customerPaymentMethods: {
-      allowStorage: true // defaults to true
+      allowStorage: true ,// defaults to true
+      store:true
     }
     // Note for marketplaces: Add a sub account id here as `accountId`
   });
