--- a/index.html
+++ b/index.html
@@ -1,136 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <script src="https://embedded.ryftpay.com/v1/ryft.min.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<head>
-  <script src="https://embedded.ryftpay.com/v1/ryft.min.js"></script>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-
-<body>
-  <div>
-    <div className="Ryft--paysection">
-      <form id="ryft-pay-form" className="Ryft--payform">
-        <button id="pay-btn" disabled>
-          PAY NOW
-        </button>
-        <div id="ryft-pay-error">
-          <!-- populate this div with any errors -->
-        </div>
-      </form>
+  <body>
+    <div>
+      <div className="Ryft--paysection">
+        <form id="ryft-pay-form" className="Ryft--payform">
+          <button id="pay-btn" disabled>PAY NOW</button>
+          <div id="ryft-pay-error">
+            <!-- populate this div with any errors -->
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
-</body>
-<script type="text/javascript">
-  const clientSecret = "ps_01H7HQHP05NCKX5NVNRVEWPBHZ_secret_c02c79b0-3b5c-40f5-a01a-7da0283d093a"; // fetch from your backend
-  Ryft.init({
-   
-        // publicKey: "pk_mdVWR4Kn8Cr+mx/Wy6xhnmRAf8A8oSPrJ0drdWIXKDGfqAEuxeiJ6m8PiX+XESps",
+  </body>
+  <script type="text/javascript">
+    const clientSecret =
+      "ps_01H7HQHP05NCKX5NVNRVEWPBHZ_secret_c02c79b0-3b5c-40f5-a01a-7da0283d093a"; // fetch from your backend
+    Ryft.init({
+      // publicKey: "pk_mdVWR4Kn8Cr+mx/Wy6xhnmRAf8A8oSPrJ0drdWIXKDGfqAEuxeiJ6m8PiX+XESps",
 
-    publicKey: "pk_sandbox_KsBhr+1YuoJytmfdNgPxaZ5ekp0uKVVpGZq7Qz0r5W0ESpQ3ZIBJmpNr3nsUyYAm",
-    clientSecret,
-    usage: 'payment', //default, the customer is paying
-    customerPaymentMethods: {
-      allowStorage: true ,// defaults to true
-      store:true,
-      rawJson:{  "items": [
-                {
-                    "id": "pmt_01H7HF1YK61GS9DD8TRE2ETFQC",
-                    "type": "Card",
-                    "card": {
-                        "scheme": "Visa",
-                        "last4": "0004",
-                        "expiryMonth": "10",
-                        "expiryYear": "2025"
-                    },
-                    "customerId": "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
-                    "createdTimestamp": 1691729590
-                },
-                {
-                    "id": "pmt_01H7HETCWJBP00MA30ZAV7GFSX",
-                    "type": "Card",
-                    "card": {
-                        "scheme": "Visa",
-                        "last4": "0004",
-                        "expiryMonth": "11",
-                        "expiryYear": "2025"
-                    },
-                    "customerId": "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
-                    "createdTimestamp": 1691729343
-                },
-                {
-                    "id": "pmt_01H7FA37PTHRRQA3QE53QPFJ85",
-                    "type": "Card",
-                    "card": {
-                        "scheme": "Visa",
-                        "last4": "0001",
-                        "expiryMonth": "10",
-                        "expiryYear": "2025"
-                    },
-                    "customerId": "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
-                    "createdTimestamp": 1691657281
-                },
-                {
-                    "id": "pmt_01H7CC4C95313QVHYYKYS1TMKT",
-                    "type": "Card",
-                    "card": {
-                        "scheme": "Visa",
-                        "last4": "0004",
-                        "expiryMonth": "10",
-                        "expiryYear": "2025"
-                    },
-                    "customerId": "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
-                    "createdTimestamp": 1691558752
-                },
-                {
-                    "id": "pmt_01H68ARMBGVWDJAT9D0RZQTE7D",
-                    "type": "Card",
-                    "card": {
-                        "scheme": "Visa",
-                        "last4": "0085",
-                        "expiryMonth": "12",
-                        "expiryYear": "2029"
-                    },
-                    "customerId": "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
-                    "createdTimestamp": 1690349359
-                }
-            ]}
-    }
-    // Note for marketplaces: Add a sub account id here as `accountId`
-  });
+      publicKey:
+        "pk_sandbox_KsBhr+1YuoJytmfdNgPxaZ5ekp0uKVVpGZq7Qz0r5W0ESpQ3ZIBJmpNr3nsUyYAm",
+      clientSecret,
+      usage: "payment", //default, the customer is paying
+      customerPaymentMethods: {
+        allowStorage: true, // defaults to true
+        store: true,
+        rawJson: {
+          items: [
+            {
+              id: "pmt_01H7HF1YK61GS9DD8TRE2ETFQC",
+              type: "Card",
+              card: {
+                scheme: "Visa",
+                last4: "0004",
+                expiryMonth: "10",
+                expiryYear: "2025",
+              },
+              customerId: "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
+              createdTimestamp: 1691729590,
+            },
+            {
+              id: "pmt_01H7HETCWJBP00MA30ZAV7GFSX",
+              type: "Card",
+              card: {
+                scheme: "Visa",
+                last4: "0004",
+                expiryMonth: "11",
+                expiryYear: "2025",
+              },
+              customerId: "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
+              createdTimestamp: 1691729343,
+            },
+            {
+              id: "pmt_01H7FA37PTHRRQA3QE53QPFJ85",
+              type: "Card",
+              card: {
+                scheme: "Visa",
+                last4: "0001",
+                expiryMonth: "10",
+                expiryYear: "2025",
+              },
+              customerId: "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
+              createdTimestamp: 1691657281,
+            },
+            {
+              id: "pmt_01H7CC4C95313QVHYYKYS1TMKT",
+              type: "Card",
+              card: {
+                scheme: "Visa",
+                last4: "0004",
+                expiryMonth: "10",
+                expiryYear: "2025",
+              },
+              customerId: "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
+              createdTimestamp: 1691558752,
+            },
+            {
+              id: "pmt_01H68ARMBGVWDJAT9D0RZQTE7D",
+              type: "Card",
+              card: {
+                scheme: "Visa",
+                last4: "0085",
+                expiryMonth: "12",
+                expiryYear: "2029",
+              },
+              customerId: "cus_01H68APAJ6PFMJP45ZEWEBT8EB",
+              createdTimestamp: 1690349359,
+            },
+          ],
+        },
+      },
+      // Note for marketplaces: Add a sub account id here as `accountId`
+    });
 
-  Ryft.addEventHandler("cardValidationChanged", e => {
-    const payButton = document.getElementById("pay-btn");
-    payButton.disabled = !e.isValid;
-  });
+    Ryft.addEventHandler("cardValidationChanged", (e) => {
+      const payButton = document.getElementById("pay-btn");
+      payButton.disabled = !e.isValid;
+    });
 
-  const form = document.getElementById("ryft-pay-form");
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-    Ryft.attemptPayment()
-      .then((paymentSession) => {
-        console.log("payment---->>>>",paymentSession)
-        if (
-          paymentSession.status === 'Approved' ||
-          paymentSession.status === 'Captured'
-        ) {
-          console.log("paymentSessionpaymentSessionpaymentSessionpaymentSession", paymentSession)
-          // Show the customer your order success page
-          return;
-        }
-        if (paymentSession.lastError) {
-          console.log("pwewqeqweqeqweaymentSessionpaymentSessionpaymentSessionpaymentSession", paymentSession)
+    const form = document.getElementById("ryft-pay-form");
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      Ryft.attemptPayment()
+        .then((paymentSession) => {
+          console.log("payment---->>>>", paymentSession);
+          if (
+            paymentSession.status === "Approved" ||
+            paymentSession.status === "Captured"
+          ) {
+            // Show the customer your order success page
+            return;
+          }
+          if (paymentSession.lastError) {
+            console.log(
+              "pwewqeqweqeqweaymentSessionpaymentSessionpaymentSessionpaymentSession",
+              paymentSession
+            );
 
-          const userFacingError = Ryft.getUserFacingErrorMessage(paymentSession.lastError);
-          alert("lastError")
+            const userFacingError = Ryft.getUserFacingErrorMessage(
+              paymentSession.lastError
+            );
+            alert("lastError");
 
-          // Show userFacingError to customer
-        }
-      })
-      .catch((error) => {
-        // Show error to customer
-      });
-  });
-</script>
-
+            // Show userFacingError to customer
+          }
+        })
+        .catch((error) => {
+          // Show error to customer
+        });
+    });
+  </script>
 </html>
